# Browser-Automation

./: .gitignore  README.md
agent/: agent.py  main.py  pyproject.toml  requirements.txt
agent/src/agent/: agent.py  browser.py  main.py  tools.py
tui/: Cargo.toml
tui/src/: main.rs
