[project]
name = "agent"
version = "0.1.0"
description = "Browser automation agent using Playwright and OpenRouter"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.50.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "flask>=3.0.0",
]

[project.scripts]
agent-server = "agent.main:run"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]